--- a/elastic-redis/example/k8s/sentinel/redis-sentinel3-rc.yaml
+++ b/elastic-redis/example/k8s/sentinel/redis-sentinel3-rc.yaml
@@ -5,16 +5,19 @@ metadata:
   namespace: redis-sentinel
   labels:
     app: redis-sentinel
+    node-id: redis-sentinel-3
 
 spec:
   replicas: 1
   selector:
     app: redis-sentinel
+    node-id: redis-sentinel-3
 
   template:
     metadata:
       labels:
         app: redis-sentinel
+        node-id: redis-sentinel-3
     spec:
       containers:
       - name: redis-sentinel
