--- a/elastic-redis/example/k8s/cluster/redis1-rc.yaml
+++ b/elastic-redis/example/k8s/cluster/redis1-rc.yaml
@@ -20,8 +20,7 @@ spec:
         node-id: node-101
     spec:
       containers:
-
-      - name: redis-node-101
+      - name: redis-node
         image: mpschmidt/elastic-redis:3.2.5-1.0
         imagePullPolicy: IfNotPresent
         command: ["/run.sh"]
