--- a/elastic-redis/example/k8s/sentinel/redis-node3-rc.yaml
+++ b/elastic-redis/example/k8s/sentinel/redis-node3-rc.yaml
@@ -17,7 +17,7 @@ spec:
         app: redis-node-3
     spec:
       containers:
-      - name: redis-node-3
+      - name: redis-node
         image: mpschmidt/elastic-redis:3.2.5-1.0
         imagePullPolicy: IfNotPresent
         env:
@@ -25,14 +25,15 @@ spec:
           value: "SENTINEL_SLAVE"
         - name: "SENTINEL_MASTER_ID"
           value: "mymaster"
-        - name: "REDIS_CONFIG"
         - name: "SENTINEL_SERVICE_HOST"
           value: "${REDIS_SENTINEL_SERVICE_HOST}"
         - name: "SENTINEL_SERVICE_PORT"
           value: "${REDIS_SENTINEL_SERVICE_PORT}"
+        - name: "REDIS_CONFIG"
           value: |
             slave-announce-ip ${REDIS_NODE_3_SERVICE_HOST}
             slave-announce-port ${REDIS_NODE_3_SERVICE_PORT}
+            appendonly no
         ports:
         - name: redis-port
           containerPort: 6379
