--- a/example/k8s/cluster/cluster-metrics-rc.yaml
+++ b/example/k8s/cluster/cluster-metrics-rc.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1
-kind: ReplicationController
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
   name: cluster-metrics
   namespace: redis-cluster
@@ -8,9 +8,6 @@ metadata:
 
 spec:
   replicas: 1
-  selector:
-    app: cluster-metrics
-
   template:
     metadata:
       labels:
@@ -22,10 +19,10 @@ spec:
     spec:
       containers:
       - name: redis-exporter
-        image: oliver006/redis_exporter:v0.10.3
+        image: oliver006/redis_exporter:v0.12
         args:
-          - "-redis.addr=redis://redis-001-node-101:6379,redis://redis-001-node-102:6379,redis://redis-001-node-201:6379,redis://redis-001-node-202:6379,redis://redis-001-node-301:6379,redis://redis-001-node-302:6379"
-          - "-namespace=redis_cluster"
+          - "-redis.addr=redis://redis-101:6379,redis://redis-102:6379,redis://redis-201:6379,redis://redis-202:6379,redis://redis-301:6379,redis://redis-302:6379"
+          - "-namespace=redis"
         ports:
         - name: metrics-port
           containerPort: 9121
