--- a/example/k8s/cluster/redis1-srv.yaml
+++ b/example/k8s/cluster/redis1-srv.yaml
@@ -1,17 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis-001-node-101
+  name: redis-101
   namespace: redis-cluster
   labels:
     type: cluster
     app: redis
 spec:
   ports:
-  - name: redis1-db
+  - name: redis-db
     port: 6379
     targetPort: 6379
-  - name: redis1-cluster
+  - name: redis-cluster
     port: 16379
     targetPort: 16379
   selector:
