--- a/example/k8s/cluster/redis4-srv.yaml
+++ b/example/k8s/cluster/redis4-srv.yaml
@@ -1,17 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis-001-node-202
+  name: redis-202
   namespace: redis-cluster
   labels:
     type: cluster
     app: redis
 spec:
   ports:
-  - name: redis4-db
+  - name: redis-db
     port: 6379
     targetPort: 6379
-  - name: redis4-cluster
+  - name: redis-cluster
     port: 16379
     targetPort: 16379
   selector:
