--- a/example/k8s/sentinel/redis-node3-rc.yaml
+++ b/example/k8s/sentinel/redis-node3-rc.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1
-kind: ReplicationController
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
   name: redis-node-3
   namespace: redis-sentinel
@@ -8,9 +8,6 @@ metadata:
 
 spec:
   replicas: 1
-  selector:
-    app: redis-node-3
-
   template:
     metadata:
       labels:
@@ -18,7 +15,7 @@ spec:
     spec:
       containers:
       - name: redis-node
-        image: oberthur/docker-redis:3.2.5
+        image: oberthur/docker-redis:4.0.1
         imagePullPolicy: IfNotPresent
         env:
         - name: "REDIS_NODE_TYPE"
