--- a/example/k8s/sentinel/redis-sentinel1-rc.yaml
+++ b/example/k8s/sentinel/redis-sentinel1-rc.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1
-kind: ReplicationController
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
   name: redis-sentinel-1
   namespace: redis-sentinel
@@ -9,10 +9,6 @@ metadata:
 
 spec:
   replicas: 1
-  selector:
-    app: redis-sentinel
-    node-id: redis-sentinel-1
-
   template:
     metadata:
       labels:
@@ -21,7 +17,7 @@ spec:
     spec:
       containers:
       - name: redis-sentinel
-        image: oberthur/docker-redis:3.2.5
+        image: oberthur/docker-redis:4.0.1
         imagePullPolicy: IfNotPresent
         env:
         - name: "REDIS_NODE_TYPE"
@@ -40,8 +36,8 @@ spec:
           value: |
             sentinel myid aaaabbbbccccddddeeee00000000000000000001
             sentinel monitor ${SENTINEL_MASTER_ID} ${MASTER_IP} ${MASTER_PORT} 2
-            sentinel down-after-milliseconds ${SENTINEL_MASTER_ID} 20000
-            sentinel failover-timeout ${SENTINEL_MASTER_ID} 60000
+            sentinel down-after-milliseconds ${SENTINEL_MASTER_ID} 10000
+            sentinel failover-timeout ${SENTINEL_MASTER_ID} 30000
             sentinel parallel-syncs ${SENTINEL_MASTER_ID} 1
             bind 0.0.0.0
         ports:
