--- a/example/k8s/sentinel/sentinel-metrics-rc.yaml
+++ b/example/k8s/sentinel/sentinel-metrics-rc.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1
-kind: ReplicationController
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
   name: sentinel-metrics
   namespace: redis-sentinel
@@ -8,9 +8,6 @@ metadata:
 
 spec:
   replicas: 1
-  selector:
-    app: sentinel-metrics
-
   template:
     metadata:
       labels:
@@ -22,7 +19,7 @@ spec:
     spec:
       containers:
       - name: redis-exporter
-        image: oliver006/redis_exporter:v0.10.3
+        image: oliver006/redis_exporter:v0.12
         args:
           - "-redis.addr=redis://redis-node-1:6379,redis://redis-node-2:6379,redis://redis-node-3:6379"
           - "-namespace=redis_sentinel"
